grammar.js
    source_file: ($) =>
      repeat(
        choice(
          seq($._expression, ';'),
          $._statement,
          seq($.quit_statement, ';'),
          $.help_statement,
        ),
      ),

    // Statements
    _statement: ($) =>
      choice(
        seq($._statement_inner, ';'),
        ';', // empty statement
      ),

    _expression: ($) =>
      choice(
        $._variable,
        $.binary_expression,
        $.unary_expression,

        $.integer,
        $.float,
        $.bool,
        $.tilde,
        $.char,
        $.string,
        $.function,
        $.lambda,
        $.atomic_function,

        $.list_expression,
        $.range_expression,
        $.record_expression,
        $.permutation_expression,

        $.parenthesized_expression,
      ),

    // GAP source file location: src/read.c ReadQualifiedExpr
    unary_expression: ($) =>
      choice(
        prec.left(
          PREC.UNARY,
          seq(
            field('operator', choice('+', '-')),
            field('expression', $._expression),
          ),
        ),
        prec.left(
          PREC.NOT,
          seq(field('operator', 'not'), field('expression', $._expression)),
        ),
      ),

    // GAP source file location: src/scanner.c GetNumber
    integer: (_) =>
      lineContinuation(
        LITERAL_REGEXP.INTEGER,
        LITERAL_REGEXP.LINE_CONTINUATION,
      ),

    // GAP source file location: src/scanner.c GetNumber
    list_expression: ($) => seq('[', commaSep(optional($._expression)), ']'),

    record_expression: ($) =>
      seq('rec', '(', commaSep($.record_entry), optional(','), ')'),

    identifier: (_) =>
      lineContinuation(
        LITERAL_REGEXP.IDENTIFIER,
        LITERAL_REGEXP.LINE_CONTINUATION,
      ),
